k8s/coma/apps/navidrome/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: navidrome
  namespace: navidrome
spec:
  parentRefs:
    - name: web-gateway
      namespace: kube-system
      sectionName: artichoke-cc-https
  hostnames:
    - music.artichoke.cc
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: navidrome
          port: 4533
