k8s/coma/apps/navidrome/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: navidrome
  namespace: navidrome
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/router.middlewares: default/https-redirect@kubernetescrd,default/hsts@kubernetescrd
spec:
  rules:
    - host: "music.artichokenetwork.com"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: navidrome
                port:
                  number: 4533
    - host: "music.artichoke.cc"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: navidrome
                port:
                  number: 4533
  tls:
    - hosts:
        - "music.artichokenetwork.com"
      secretName: artichokenetwork-cert
    - hosts:
        - "music.artichoke.cc"
      secretName: artichoke-cc-cert
